@@ -63,6 +63,8 @@ Changes in Achievo 1.3
   [dennisjan]
 + Added new feature when you add a project and you want to copy a specific 
   documentstructure. [dennisjan]
++ Added config to use a startingpoint for overtime_balance hours, if no
+  records can be found to determine a new balance. [Dennis, Ivo]  
 - Removed duplicate Dayview link in the calendar Employeeview. [Guido]
 * Fixed PHP notices. [Guido]
 * Replaced deprecated text() calls by atktext(). [Guido]
@@ -250,6 +252,9 @@ Changes in Achievo 1.3
 * In project node changed from address to the default from address. [dennisjan]
 * Project node now uses the parseDirectoryName function of atkfileutils
   [dennisjan]
+* Fixed: deleting of none-manual overtime_balance hours did not remove records
+  with the manual field set to NULL. [Dennis]
+    
   
 Changes in Achievo 1.2.1
 ------------------------
